# ECE

./: .env  .env.example  .env.nebius.example  .eslintrc.js  .gitignore  .prettierrc.js  .windsurfrules.md  APP_ORDERING.md  END_GOAL.md  ENHANCED-FEATURES.md  MIGRATION_BACKUP.md  MULTI_PLATFORM_EXPANSION.md  PROFILE_COMPLETION_SUMMARY.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  THEME-GUIDE.md  TYPOGRAPHY-GUIDE.md  VERSION_MANAGEMENT.md  commitlint.config.js  eslint.config.mjs  middleware.ts  next.config.js  nx.json  package-lock.json  package.json  plan.md  pnpm-lock.yaml  run-seed.js  run-seed.sh  tailwind.config.js  test-db-connection.js  tsconfig.base.json  tsconfig.json  types.tsx  vercel.json
.github/: copilot-instructions.md
.husky/: pre-commit
.next/: trace
actions/: cart-actions.ts
agents/: copilot-backend-agent.prompt.md
app/: .env.local  auto-rollback.css  betting-checkout.tsx  betting-dark-theme.css  betting-style.css  branch-comparison.css  button-cursor.css  button-feedback.css  button-focus-visible.css  button-focus.css  button-styles.css  cart-animations.css  cursive-font.css  curved-thin-fonts.css  dark-mode-enhancements.css  data.ts  deployment-animations.css  deployment-comparison.css  desktop-layout.tsx  eslint.config.mjs  font-animations.css  font-debug.css  font-loading-optimizations.css  fonts.ts  globals.css  grid-pattern.css  jest.config.ts  jest.setup.ts  keyboard-navigation.css  layout.tsx  lazy-loading.css  (+34 more)
env/: .env  (+2 more)
libs/blockchain/solana/ece-token/: Cargo.toml  deploy.sh
libs/blockchain/solana/ece-token/src/: instruction.rs
(+1653 files in other folders)
