[package]
name = "ece-token"
version = "0.1.0"
description = "ECE Token - USDC-backed stablecoin for Elite Card Exchange platform"
edition = "2021"
license = "MIT"
authors = ["ECE Development Team <dev@ece-platform.com>"]
repository = "https://github.com/ece-platform/ece-token"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.18"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.0"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.0", features = ["macros"] }

[features]
no-entrypoint = []
